--- a/.github/workflows/Build and deploy Docker app.yml
+++ b/.github/workflows/Build and deploy Docker app.yml
@@ -120,6 +120,8 @@ jobs:
       output_appInsightsAPIApplicationId: ${{ steps.Infra.outputs.out_appInsightsAPIApplicationId }}
       output_keyvaultName: ${{ steps.Infra.outputs.out_keyvaultName }}
       output_containerregistryName: ${{ steps.Infra.outputs.out_containerregistryName }}
+      output_acr_username: ${{ steps.Infra.outputs.out_acr_username }}
+      output_acr_pass: ${{ steps.Infra.outputs.out_acr_pass }}
 
     name: Deploy Infrastructure
     steps:
@@ -179,9 +181,10 @@ jobs:
          echo 'output_keyvaultName: ${{ steps.Infra.outputs.out_keyvaultName }}'
 
   docker_build_pushtoacr:
-    name: Docker Build & Push to ACR
-    needs: deploy_infrastructure
     runs-on: ubuntu-latest
+    needs: deploy_infrastructure
+
+    name: Docker Build & Push to ACR
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -218,9 +221,9 @@ jobs:
     #     path: ${{ github.workspace }}/IaC/*.*
 
     - name: Docker Build & Push to ACR
-     run: |
-       docker login ${{ steps.Infra.outputs.output_containerregistryName }}.azurecr.io --username ${{ steps.Infra.outputs.output_acr_username }} --password ${{ steps.Infra.outputs.output_acr_pass }}
-       docker build "$GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}}" -f  "${{env.DOCKERFILEPATH}}/Dockerfile" -t ${{ steps.Infra.outputs.output_containerregistryName }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
+      run: |
+        docker login ${{ steps.Infra.outputs.output_containerregistryName }}.azurecr.io --username ${{ steps.Infra.outputs.output_acr_username }} --password ${{ steps.Infra.outputs.output_acr_pass }}
+        docker build "$GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}}" -f  "${{env.DOCKERFILEPATH}}/Dockerfile" -t ${{ steps.Infra.outputs.output_containerregistryName }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
 
     # Create Azure container registry
     #- uses: azure/arm-deploy@v1
