--- a/.github/workflows/Build and deploy Docker app.yml
+++ b/.github/workflows/Build and deploy Docker app.yml
@@ -119,8 +119,8 @@ jobs:
       output_appInsightsAPIApplicationId: ${{ steps.Infra.outputs.out_appInsightsAPIApplicationId }}
       output_keyvaultName: ${{ steps.Infra.outputs.out_keyvaultName }}
       output_containerregistryName: ${{ steps.Infra.outputs.out_containerregistryName }}
-      output_acr_username: ${{ steps.Infra.outputs.out_acr_username }}
-      output_acr_password: ${{ steps.Infra.outputs.out_acr_password }}
+      # output_acr_username: ${{ steps.Infra.outputs.out_acr_username }}
+      # output_acr_password: ${{ steps.Infra.outputs.out_acr_password }}
 
     name: Deploy Infrastructure
     steps:
@@ -180,8 +180,8 @@ jobs:
          echo 'output_appInsightsAPIApplicationId: ${{ steps.Infra.outputs.out_appInsightsAPIApplicationId }}'
          echo 'output_keyvaultName: ${{ steps.Infra.outputs.out_keyvaultName }}'
          echo 'output_containerregistryName: ${{ steps.Infra.outputs.out_containerregistryName }}'
-         echo 'output_acr_username: ${{ steps.Infra.outputs.out_acr_username }}'
-         echo 'output_acr_pass: ${{ steps.Infra.outputs.out_acr_password }}'
+        #  echo 'output_acr_username: ${{ steps.Infra.outputs.out_acr_username }}'
+        #  echo 'output_acr_pass: ${{ steps.Infra.outputs.out_acr_password }}'
 
   docker_build_pushtoacr:
     runs-on: ubuntu-latest
