--- a/.github/workflows/Build and deploy Docker app.yml
+++ b/.github/workflows/Build and deploy Docker app.yml
@@ -213,10 +213,60 @@ jobs:
     #     name: IaC
     #     path: ${{ github.workspace }}/IaC/*.*
 
-    - name: Docker Build & Push to ACR
-      run: |
-        docker login ${{ steps.Infra.outputs.output_containerregistryName }}.azurecr.io --username ${{ steps.Infra.outputs.output_acr_username }} --password ${{ steps.Infra.outputs.output_acr_pass }}
-        docker build "$GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}}" -f  "${{env.DOCKERFILEPATH}}/Dockerfile" -t ${{ steps.Infra.outputs.output_containerregistryName }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
+    - name: Get Azure Keyvault Values
+      id: KeyVaultValue_ACRUserName
+      uses: azure/CLI@v1
+      with:
+        #azcliversion: 2.30.0
+        inlineScript: |
+          result=$(az keyvault secret show --name "acrusername" --vault-name ${{ steps.Infra.outputs.out_keyvaultName }} --query "value")
+
+    #- name: Get Azure Keyvault Values
+    #  id: KeyVaultValue_ACRPassword
+    #  uses: azure/CLI@v1
+    #  with:
+    #    #azcliversion: 2.30.0
+    #    inlineScript: |
+    #      result=$(az keyvault secret show --name "acrpassword" --vault-name ${{ steps.Infra.outputs.out_keyvaultName }} --query "value")
+
+      - name: 'Get Key Vault Value'
+        id: GetKVACRUserName
+        uses: Azure/CLI@v1
+        continue-on-error: true
+        with:
+          inlineScript: |
+            az config set extension.use_dynamic_install=yes_without_prompt
+            result=$(az keyvault secret show \
+                        --name "acrusername" \
+                        --vault-name "${{ needs.deploy_infrastructure.outputs.output_keyvaultName }}" \
+                        --query "value" --output tsv)
+            echo "::set-output name=acrusername::$result"
+
+      - name: DEBUG ONLY Display Key Vault Secret
+        run: |
+           echo 'acrusername: ${{ steps.GetKVACRUserName.outputs.acrusername }}'            
+
+      - name: 'Get Key Vault Value'
+        id: GetKVACRUserPassword
+        uses: Azure/CLI@v1
+        continue-on-error: true
+        with:
+          inlineScript: |
+            az config set extension.use_dynamic_install=yes_without_prompt
+            result=$(az keyvault secret show \
+                        --name "acrpassword" \
+                        --vault-name "${{ needs.deploy_infrastructure.outputs.output_keyvaultName }}" \
+                        --query "value" --output tsv)
+            echo "::set-output name=acruserpassword::$result"
+
+      - name: DEBUG ONLY Display Key Vault Secret
+        run: |
+           echo 'acruserpassword: ${{ steps.GetKVACRUserPassword.outputs.acruserpassword }}'    
+
+    #- name: Docker Build & Push to ACR
+    #  run: |
+    #    docker login ${{ steps.Infra.outputs.output_containerregistryName }}.azurecr.io --username ${{ steps.GetKVACRUserName.outputs.acrusername }} --password ${{ steps.GetKVACRUserPassword.outputs.acruserpassword }}
+    #    docker build "$GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}}" -f  "${{env.DOCKERFILEPATH}}/Dockerfile" -t ${{ steps.Infra.outputs.output_containerregistryName }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
 
     # Create Azure container registry
     #- uses: azure/arm-deploy@v1
