--- a/.github/workflows/Build and deploy Docker app.yml
+++ b/.github/workflows/Build and deploy Docker app.yml
@@ -30,7 +30,7 @@ env:
   
 jobs:
   build:
-    name: Build Application
+    name: Build Web Application
     runs-on: ubuntu-latest
     steps:
 
@@ -247,10 +247,10 @@ jobs:
       run: |
           echo 'acruserpassword: ${{ steps.GetKVACRUserPassword.outputs.acruserpassword }}'    
 
-    #- name: Docker Build & Push to ACR
-    #  run: |
-    #    docker login ${{ steps.Infra.outputs.output_containerregistryName }}.azurecr.io --username ${{ steps.GetKVACRUserName.outputs.acrusername }} --password ${{ steps.GetKVACRUserPassword.outputs.acruserpassword }}
-    #    docker build "$GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}}" -f  "${{env.DOCKERFILEPATH}}/Dockerfile" -t ${{ steps.Infra.outputs.output_containerregistryName }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
+    - name: Docker Build & Push to ACR
+      run: |
+        docker login ${{ steps.Infra.outputs.output_containerregistryName }}.azurecr.io --username ${{ steps.GetKVACRUserName.outputs.acrusername }} --password ${{ steps.GetKVACRUserPassword.outputs.acruserpassword }}
+        docker build "$GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}}" -f  "${{env.DOCKERFILEPATH}}/Dockerfile" -t ${{ steps.Infra.outputs.output_containerregistryName }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
 
     # Create Azure container registry
     #- uses: azure/arm-deploy@v1
