--- a/.github/workflows/Build and deploy Docker app.yml
+++ b/.github/workflows/Build and deploy Docker app.yml
@@ -14,8 +14,8 @@ env:
   DOCKERFILEPATH: "Application/aspnet-core-dotnet-core-net6"
   REGISTRYSKU: "Standard"
   #REGISTRYNAME: "azurewebappforcontainersacr"
-  REGISTRYLOCATION: "East US 2"
-  IMAGENAME: "azurewebappforcontainersedd3"
+  #REGISTRYLOCATION: "East US 2"
+  #IMAGENAME: "azurewebappforcontainersedd3"
   #RESOURCEGROUPNAME: rg-AzureWebAppforContainers
   #LOCATION: East US 2
   #APPINSIGHTSLOCATION: East US 2
@@ -123,6 +123,7 @@ jobs:
       output_webSiteName: ${{ steps.Infra.outputs.out_webSiteName }}
       output_keyvaultName: ${{ steps.Infra.outputs.out_keyvaultName }}
       output_containerregistryName: ${{ steps.Infra.outputs.out_containerregistryName }}
+      output_containerName: ${{ steps.Infra.outputs.out_containerName }}
 
     name: Deploy Infrastructure
     steps:
@@ -178,6 +179,7 @@ jobs:
       run: |
          echo 'output_webSiteName: ${{ steps.Infra.outputs.out_webSiteName }}'
          echo 'output_keyvaultName: ${{ steps.Infra.outputs.out_keyvaultName }}'
+         echo 'output_containerName: ${{ steps.Infra.outputs.out_containerName }}'
 
   docker_build_pushtoacr:
     runs-on: ubuntu-latest
@@ -220,7 +222,7 @@ jobs:
     #     path: ${{ github.workspace }}/IaC/*.*
 
     - name: 'Get Key Vault Value'
-      id: GetKVACRUserName
+      id: GetKVACRValues
       uses: Azure/CLI@v1
       continue-on-error: true
       with:
@@ -241,18 +243,18 @@ jobs:
     #  run: |
     #      echo 'acrusername: ${{ steps.GetKVACRUserName.outputs.acrusername }}'            
 
-    - name: 'Get Key Vault Value'
-      id: GetKVACRUserPassword
-      uses: Azure/CLI@v1
-      continue-on-error: true
-      with:
-        inlineScript: |
-          az config set extension.use_dynamic_install=yes_without_prompt
-          result=$(az keyvault secret show \
-                      --name "acrpassword" \
-                      --vault-name "${{ needs.deploy_infrastructure.outputs.output_keyvaultName }}" \
-                      --query "value" --output tsv)
-          echo "::set-output name=acruserpassword::$result"
+    #- name: 'Get Key Vault Value'
+    #  id: GetKVACRUserPassword
+    #  uses: Azure/CLI@v1
+    #  continue-on-error: true
+    #  with:
+    #    inlineScript: |
+    #      az config set extension.use_dynamic_install=yes_without_prompt
+    #      result=$(az keyvault secret show \
+    #                  --name "acrpassword" \
+    #                  --vault-name "${{ needs.deploy_infrastructure.outputs.output_keyvaultName }}" \
+    #                  --query "value" --output tsv)
+    #      echo "::set-output name=acruserpassword::$result"
 
     #- name: DEBUG ONLY Display Key Vault Secret
     #  run: |
@@ -260,8 +262,8 @@ jobs:
 
     - name: Docker Build & Push to ACR
       run: |
-        docker login ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io --username ${{ steps.GetKVACRUserName.outputs.acrusername }} --password ${{ steps.GetKVACRUserPassword.outputs.acruserpassword }}
-        docker build "$GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}}" -f  "${{env.DOCKERFILEPATH}}/Dockerfile" -t ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
+        docker login ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io --username ${{ steps.GetKVACRValues.outputs.acrusername }} --password ${{ steps.GetKVACRValues.outputs.acruserpassword }}
+        docker build "$GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}}" -f  "${{env.DOCKERFILEPATH}}/Dockerfile" -t ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
 
     # Create Azure container registry
     #- uses: azure/arm-deploy@v1
