--- a/Application/aspnet-core-dotnet-core-net6/Dockerfile
+++ b/Application/aspnet-core-dotnet-core-net6/Dockerfile
@@ -22,5 +22,5 @@ RUN dotnet publish -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build /app/publish .
 ENTRYPOINT ["dotnet", "aspnet-core-dotnet-core-net6.dll"]
