--- a/.github/workflows/Build and deploy Docker app.yml
+++ b/.github/workflows/Build and deploy Docker app.yml
@@ -123,6 +123,7 @@ jobs:
       output_webSiteName: ${{ steps.Infra.outputs.out_webSiteName }}
       output_keyvaultName: ${{ steps.Infra.outputs.out_keyvaultName }}
       output_containerregistryName: ${{ steps.Infra.outputs.out_containerregistryName }}
+      output_containerAppName: ${{ steps.Infra.outputs.out_containerAppName }}
       output_containerName: ${{ steps.Infra.outputs.out_containerName }}
 
     name: Deploy Infrastructure
@@ -221,7 +222,7 @@ jobs:
     #     name: IaC
     #     path: ${{ github.workspace }}/IaC/*.*
 
-    - name: 'Get Key Vault Value'
+    - name: 'Get Key Vault Values'
       id: GetKVACRValues
       uses: Azure/CLI@v1
       continue-on-error: true
@@ -239,27 +240,7 @@ jobs:
             --query "value" --output tsv)
           echo "::set-output name=acruserpassword::$result"
 
-    #- name: DEBUG ONLY Display Key Vault Secret
-    #  run: |
-    #      echo 'acrusername: ${{ steps.GetKVACRUserName.outputs.acrusername }}'            
-
-    #- name: 'Get Key Vault Value'
-    #  id: GetKVACRUserPassword
-    #  uses: Azure/CLI@v1
-    #  continue-on-error: true
-    #  with:
-    #    inlineScript: |
-    #      az config set extension.use_dynamic_install=yes_without_prompt
-    #      result=$(az keyvault secret show \
-    #                  --name "acrpassword" \
-    #                  --vault-name "${{ needs.deploy_infrastructure.outputs.output_keyvaultName }}" \
-    #                  --query "value" --output tsv)
-    #      echo "::set-output name=acruserpassword::$result"
-
-    #- name: DEBUG ONLY Display Key Vault Secret
-    #  run: |
-    #      echo 'acruserpassword: ${{ steps.GetKVACRUserPassword.outputs.acruserpassword }}'    
-
+    #docker tag ${{ env.IMAGENAME }}:${{ github.sha }} ${{ env.IMAGENAME }}:latest
     - name: Docker Build & Push to ACR
       run: |
         docker login ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io --username ${{ steps.GetKVACRValues.outputs.acrusername }} --password ${{ steps.GetKVACRValues.outputs.acruserpassword }}
@@ -335,7 +316,7 @@ jobs:
         # Name of the Resource Group in which the Container App will be created
         resource-group: ${{ env.Azure_Resource_GroupName }}
         # Name of the Container App
-        name: 'azurecontainerapp-rpagels'
+        name: ${{ needs.deploy_infrastructure.outputs.output_containerAppName }}
         # Name of Container Image. If the `mode` input is `deactivate-revision`, this input is ignored.
         # image: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
         #image: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:latest
