--- a/.github/workflows/Build and deploy Docker app.yml
+++ b/.github/workflows/Build and deploy Docker app.yml
@@ -191,38 +191,12 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    # - name: Setup .NET Core
-    #   uses: actions/setup-dotnet@v1
-    #   with:
-    #     dotnet-version: ${{ env.dotnet_version }}
-          
     - name: Azure authentication
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    # - name: Restore
-    #   run: dotnet restore ./Application/aspnet-core-dotnet-core-net6/aspnet-core-dotnet-core-net6.csproj
-
-    # - name: Build
-    #   run: dotnet build ./Application/aspnet-core-dotnet-core-net6/aspnet-core-dotnet-core-net6.csproj --configuration ${{ env.CONFIGURATION }} --no-restore
-
-    # - name: Publish
-    #   run: dotnet publish ./Application/aspnet-core-dotnet-core-net6/aspnet-core-dotnet-core-net6.csproj --configuration ${{ env.CONFIGURATION }} --no-build --output './web'
-
-    # - name: Upload Build Artifacts-Website
-    #   uses: actions/upload-artifact@v3
-    #   with:
-    #     name: Web
-    #     path: ${{ github.workspace }}/web
-
-    # - name: Upload Infrastucture Files
-    #   uses: actions/upload-artifact@v3
-    #   with:
-    #     name: IaC
-    #     path: ${{ github.workspace }}/IaC/*.*
-
-    - name: 'Get Key Vault Values'
+    - name: 'Get Key Vault values'
       id: GetKVACRValues
       uses: Azure/CLI@v1
       continue-on-error: true
@@ -247,37 +221,6 @@ jobs:
         docker build "$GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}}" -f  "${{env.DOCKERFILEPATH}}/Dockerfile" -t ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
         docker push ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
 
-    # Create Azure container registry
-    #- uses: azure/arm-deploy@v1
-    #  id: createAcr
-    ##  with:
-    #    subscriptionId: ${{ env.SUBSCRIPTIONID }}
-    #    resourceGroupName: ${{ env.RESOURCEGROUPNAME }}
-    #    template: ./ArmTemplates/containerRegistry-template.json
-    #    parameters: registryName="${{ env.REGISTRYNAME }}" registryLocation="${{ env.REGISTRYLOCATION }}" registrySku="${{ env.REGISTRYSKU }}"
-
-    #- name: Fetch ACR credentials
-    #  id: acrCredentials
-    #  continue-on-error: false
-    #  run: |
-    #      echo "::set-output name=acr_username::`az acr credential show -n ${{ env.REGISTRYNAME }} --query username`"
-    #      echo "::set-output name=acr_password::`az acr credential show -n ${{ env.REGISTRYNAME }} --query passwords[0].value`"
-    #      echo "::add-mask::`az acr credential show -n ${{ env.REGISTRYNAME }} --query passwords[0].value`"
-
-    #- name: ACR authentication
-    #  uses: azure/docker-login@v1
-    #  with:
-    #    login-server: ${{ env.REGISTRYNAME }}.azurecr.io
-    #    username: ${{ steps.acrCredentials.outputs.acr_username }}
-    #    password: ${{ steps.acrCredentials.outputs.acr_password }}
-
-    #- name: Docker Build & Push to ACR
-    #  run: |
-    #    docker login ${{ env.REGISTRYNAME }}.azurecr.io --username ${{ steps.acrCredentials.outputs.acr_username }} --password ${{ steps.acrCredentials.outputs.acr_password }}
-    #    docker build "$GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}}" -f  "${{env.DOCKERFILEPATH}}/Dockerfile" -t ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
-    #    #docker tag ${{ env.IMAGENAME }}:${{ github.sha }} ${{ env.IMAGENAME }}:latest
-    #    docker push ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
-    
   deploy_application_to_webapp:
     name: Deploy to Web App
     needs: [docker_build_pushtoacr, deploy_infrastructure]
@@ -301,7 +244,7 @@ jobs:
       uses: azure/webapps-deploy@v2
       with: 
         app-name: ${{ needs.deploy_infrastructure.outputs.output_webSiteName }}
-        images: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
+        images: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:latest
 
   deploy_application_to_containerapp:
     name: Deploy to Container App
@@ -333,7 +276,7 @@ jobs:
         # Name of Container Image. If the `mode` input is `deactivate-revision`, this input is ignored.
         # image: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
         #image: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:latest
-        image: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:lastest
+        image: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:latest
         # Suffixes for New Revision or Target Revision of deactivation. If the `mode` input is `deactivate-revision`, this input needs to be set.
         revision-name-suffix: 'staging'
         # Enable Deactivation-Revision Mode of this action. `true` or `false`. Default value is `false`
