--- a/.github/workflows/Build and deploy Docker app.yml
+++ b/.github/workflows/Build and deploy Docker app.yml
@@ -224,7 +224,11 @@ jobs:
   deploy_application_to_webapp:
     name: Deploy to Web App
     needs: [docker_build_pushtoacr, deploy_infrastructure]
+    environment:
+      name: 'Development'
+      url: ${{ needs.deploy_infrastructure.outputs.output_webSiteName }}
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -244,7 +248,7 @@ jobs:
       uses: azure/webapps-deploy@v2
       with: 
         app-name: ${{ needs.deploy_infrastructure.outputs.output_webSiteName }}
-        images: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:latest
+        images: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
 
   deploy_application_to_containerapp:
     name: Deploy to Container App
@@ -265,22 +269,28 @@ jobs:
          echo 'output_keyvaultName: ${{ needs.deploy_infrastructure.outputs.output_keyvaultName }}'
          echo 'output_containerName: ${{ needs.deploy_infrastructure.outputs.output_containerName }}'
          echo 'output_containerAppName: ${{ needs.deploy_infrastructure.outputs.output_containerAppName }}'
-         
-    - name: Deploy Azure Container App Review Revisions
-      uses: Azure/aca-review-apps@v0.2.1
+
+    - name: Deploy Container
+      uses: Azure/container-apps-deploy-action@v0
       with:
-        # Name of the Resource Group in which the Container App will be created
-        resource-group: ${{ env.Azure_Resource_GroupName }}
-        # Name of the Container App
-        name: ${{ needs.deploy_infrastructure.outputs.output_containerAppName }}
-        # Name of Container Image. If the `mode` input is `deactivate-revision`, this input is ignored.
-        # image: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
-        #image: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:latest
-        image: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:latest
-        # Suffixes for New Revision or Target Revision of deactivation. If the `mode` input is `deactivate-revision`, this input needs to be set.
-        revision-name-suffix: 'staging'
-        # Enable Deactivation-Revision Mode of this action. `true` or `false`. Default value is `false`
-        #deactivate-revision-mode: # optional
+        acrName: ${{ needs.deploy_infrastructure.outputs.output_containerAppName }}
+        imageToDeploy: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
+
+    # - name: Deploy Azure Container App Review Revisions
+    #   uses: Azure/aca-review-apps@v0.2.1
+    #   with:
+    #     # Name of the Resource Group in which the Container App will be created
+    #     resource-group: ${{ env.Azure_Resource_GroupName }}
+    #     # Name of the Container App
+    #     name: ${{ needs.deploy_infrastructure.outputs.output_containerAppName }}
+    #     # Name of Container Image. If the `mode` input is `deactivate-revision`, this input is ignored.
+    #     # image: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
+    #     #image: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:latest
+    #     image: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
+    #     # Suffixes for New Revision or Target Revision of deactivation. If the `mode` input is `deactivate-revision`, this input needs to be set.
+    #     revision-name-suffix: 'staging'
+    #     # Enable Deactivation-Revision Mode of this action. `true` or `false`. Default value is `false`
+    #     #deactivate-revision-mode: # optional
     
 
   # FunctionalTests:
