--- a/.github/workflows/Build and deploy Docker app.yml
+++ b/.github/workflows/Build and deploy Docker app.yml
@@ -206,7 +206,8 @@ jobs:
 
   deploy_application_to_containerapp:
     name: Deploy to Container App
-    needs: [docker_build_pushtoacr, deploy_infrastructure]
+    #needs: [docker_build_pushtoacr, deploy_infrastructure]
+    needs: [deploy_infrastructure]
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -225,10 +226,33 @@ jobs:
          echo 'output_containerAppName: ${{ needs.deploy_infrastructure.outputs.output_containerAppName }}'
          echo 'output_containerAppEnvName: ${{ needs.deploy_infrastructure.outputs.output_containerAppEnvName }}'
 
+    - name: 'Get Key Vault values'
+      id: GetKVACRValues
+      uses: Azure/CLI@v1
+      continue-on-error: true
+      with:
+        inlineScript: |
+          az config set extension.use_dynamic_install=yes_without_prompt
+          result=$(az keyvault secret show \
+                      --name "acrusername" \
+                      --vault-name "${{ needs.deploy_infrastructure.outputs.output_keyvaultName }}" \
+                      --query "value" --output tsv)
+          echo "::set-output name=acrusername::$result"
+          result=$(az keyvault secret show \
+            --name "acrpassword" \
+            --vault-name "${{ needs.deploy_infrastructure.outputs.output_keyvaultName }}" \
+            --query "value" --output tsv)
+          echo "::set-output name=acruserpassword::$result"
+
     - name: Build and Deploy Container App
       uses: Azure/container-apps-deploy-action@v0
       with:
         #acrName: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}
+        appSourcePath: $GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}} #${{ github.workspace }}
+        acrName: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io
+        acrUsername: ${{ steps.GetKVACRValues.outputs.acrusername }}
+        acrPassword: ${{ steps.GetKVACRValues.outputs.acruserpassword }}
+        imageToBuild: ${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
         containerAppName: ${{ needs.deploy_infrastructure.outputs.output_containerAppName }}
         imageToDeploy: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:latest
         runtimeStack: 'dotnetcore:6.0'
