--- a/.github/workflows/Build and deploy Docker app.yml
+++ b/.github/workflows/Build and deploy Docker app.yml
@@ -205,7 +205,7 @@ jobs:
         images: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:latest
 
   deploy_application_to_containerapp:
-    name: Deploy to Container App
+    name: Build and Deploy Container App
     #needs: [docker_build_pushtoacr, deploy_infrastructure]
     needs: [deploy_infrastructure]
     runs-on: ubuntu-latest
@@ -249,7 +249,7 @@ jobs:
       with:
         #acrName: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}
         appSourcePath: $GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}} #${{ github.workspace }}
-        acrName: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io
+        acrName: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}
         acrUsername: ${{ steps.GetKVACRValues.outputs.acrusername }}
         acrPassword: ${{ steps.GetKVACRValues.outputs.acruserpassword }}
         imageToBuild: ${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
