--- a/.github/workflows/Build and deploy Docker app.yml
+++ b/.github/workflows/Build and deploy Docker app.yml
@@ -248,6 +248,7 @@ jobs:
       uses: Azure/container-apps-deploy-action@v0
       with:
         #acrName: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}
+        resourceGroup: ${{ env.Azure_Resource_GroupName }}
         appSourcePath: $GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}} #${{ github.workspace }}
         acrName: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}
         acrUsername: ${{ steps.GetKVACRValues.outputs.acrusername }}
