--- a/Application/aspnet-core-dotnet-core-net6/Dockerfile
+++ b/Application/aspnet-core-dotnet-core-net6/Dockerfile
@@ -7,20 +7,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
+COPY ["application/aspnet-core-dotnet-core-net6/aspnet-core-dotnet-core-net6.csproj", "aspnet-core-dotnet-core-net6/"]
+RUN dotnet restore "application/aspnet-core-dotnet-core-net6/aspnet-core-dotnet-core-net6.csproj"
+COPY . .
+WORKDIR "/src/aspnet-core-dotnet-core-net6"
+RUN dotnet build "aspnet-core-dotnet-core-net6.csproj" -c Release -o /app/build
 
-# Copy the published web app
-COPY *aspnet-core-dotnet-core-net6.csproj ./
-RUN dotnet restore
-#COPY ["aspnet-core-dotnet-core-net6/aspnet-core-dotnet-core-net6.csproj", "aspnet-core-dotnet-core-net6/"]
-#RUN dotnet restore "aspnet-core-dotnet-core-net6/aspnet-core-dotnet-core-net6.csproj"
-COPY . ./
-#WORKDIR "/src/aspnet-core-dotnet-core-net6"
-#RUN dotnet build "aspnet-core-dotnet-core-net6.csproj" -c Release -o /app/build
-
-#FROM build AS publish
-RUN dotnet publish -c Release -o /app/publish /p:UseAppHost=false
+FROM build AS publish
+RUN dotnet publish "aspnet-core-dotnet-core-net6.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
-COPY --from=build /app/publish .
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "aspnet-core-dotnet-core-net6.dll"]
