--- a/.github/workflows/Build and deploy Docker app.yml
+++ b/.github/workflows/Build and deploy Docker app.yml
@@ -244,21 +244,37 @@ jobs:
             --query "value" --output tsv)
           echo "::set-output name=acruserpassword::$result"
 
-    - name: Build and Deploy Container App
-      uses: Azure/container-apps-deploy-action@v0
+    - name: 'Deploy Container App'
+      id: GetKVACRValues
+      uses: Azure/CLI@v1
+      continue-on-error: true
       with:
-        #acrName: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}
-        resourceGroup: ${{ env.Azure_Resource_GroupName }}
-        #appSourcePath: ${{ github.workspace }} #$GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}} #${{ github.workspace }}
-        #dockerfilePath: $GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}}
-        #acrName: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}
-        #acrUsername: ${{ steps.GetKVACRValues.outputs.acrusername }}
-        #acrPassword: ${{ steps.GetKVACRValues.outputs.acruserpassword }}
-        #imageToBuild: ${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
-        containerAppName: ${{ needs.deploy_infrastructure.outputs.output_containerAppName }}
-        imageToDeploy: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:latest
-        #runtimeStack: 'dotnetcore:6.0'
-        containerAppEnvironment: ${{ needs.deploy_infrastructure.outputs.output_containerAppEnvName }}
+        inlineScript: |
+          az containerapp create \
+            --name ${{ needs.deploy_infrastructure.outputs.output_containerAppName }} \
+            --resource-group ${{ env.Azure_Resource_GroupName }} \
+            --environment ${{ needs.deploy_infrastructure.outputs.output_containerAppEnvName }} \
+            --image ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:latest \
+            --target-port 80 \
+            --ingress 'external' \
+            --query properties.configuration.ingress.fqdn
+
+
+    # - name: Build and Deploy Container App
+    #   uses: Azure/container-apps-deploy-action@v0
+    #   with:
+    #     #acrName: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}
+    #     resourceGroup: ${{ env.Azure_Resource_GroupName }}
+    #     #appSourcePath: ${{ github.workspace }} #$GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}} #${{ github.workspace }}
+    #     #dockerfilePath: $GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}}
+    #     #acrName: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}
+    #     #acrUsername: ${{ steps.GetKVACRValues.outputs.acrusername }}
+    #     #acrPassword: ${{ steps.GetKVACRValues.outputs.acruserpassword }}
+    #     #imageToBuild: ${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
+    #     containerAppName: ${{ needs.deploy_infrastructure.outputs.output_containerAppName }}
+    #     imageToDeploy: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:latest
+    #     #runtimeStack: 'dotnetcore:6.0'
+    #     containerAppEnvironment: ${{ needs.deploy_infrastructure.outputs.output_containerAppEnvName }}
 
 
     # - name: Deploy Azure Container App Review Revisions
