--- a/Application/aspnet-core-dotnet-core-net6/Dockerfile
+++ b/Application/aspnet-core-dotnet-core-net6/Dockerfile
@@ -1,22 +1,19 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
-WORKDIR /app
-EXPOSE 80
-EXPOSE 443
-
+# https://hub.docker.com/_/microsoft-dotnet
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-WORKDIR /src
-COPY ["azurewebappforcontainers/application/aspnet-core-dotnet-core-net6/aspnet-core-dotnet-core-net6.csproj", "aspnet-core-dotnet-core-net6/"]
-RUN dotnet restore "application/aspnet-core-dotnet-core-net6/aspnet-core-dotnet-core-net6.csproj"
-COPY . .
-WORKDIR "/src/aspnet-core-dotnet-core-net6"
-RUN dotnet build "aspnet-core-dotnet-core-net6.csproj" -c Release -o /app/build
+WORKDIR /source
 
-FROM build AS publish
-RUN dotnet publish "aspnet-core-dotnet-core-net6.csproj" -c Release -o /app/publish /p:UseAppHost=false
+# copy csproj and restore as distinct layers
+COPY *.sln .
+COPY aspnet-core-dotnet-core-net6/*.csproj ./aspnetapp/
+RUN dotnet restore
 
-FROM base AS final
+# copy everything else and build app
+COPY aspnet-core-dotnet-core-net6/. ./aspnet-core-dotnet-core-net6/
+WORKDIR /source/aspnet-core-dotnet-core-net6
+RUN dotnet publish -c release -o /app --no-restore
+
+# final stage/image
+FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build /app ./
 ENTRYPOINT ["dotnet", "aspnet-core-dotnet-core-net6.dll"]
