--- a/Application/aspnet-core-dotnet-core-net6/Dockerfile
+++ b/Application/aspnet-core-dotnet-core-net6/Dockerfile
@@ -3,7 +3,7 @@ FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /source
 
 # copy csproj and restore as distinct layers
-COPY *.sln .
+#COPY *.sln .
 COPY aspnet-core-dotnet-core-net6/*.csproj ./aspnetapp/
 RUN dotnet restore
 
