--- a/Application/aspnet-core-dotnet-core-net6/Dockerfile
+++ b/Application/aspnet-core-dotnet-core-net6/Dockerfile
@@ -4,13 +4,16 @@ WORKDIR /source
 
 # copy csproj and restore as distinct layers
 #COPY *.sln .
-COPY aspnet-core-dotnet-core-net6/*.csproj ./aspnetapp/
+#COPY aspnet-core-dotnet-core-net6/*.csproj ./aspnetapp/
+#RUN dotnet restore
+COPY . .
 RUN dotnet restore
+RUN dotnet publish -o /app
 
 # copy everything else and build app
-COPY aspnet-core-dotnet-core-net6/. ./aspnet-core-dotnet-core-net6/
-WORKDIR /source/aspnet-core-dotnet-core-net6
-RUN dotnet publish -c release -o /app --no-restore
+#COPY aspnet-core-dotnet-core-net6/. ./aspnet-core-dotnet-core-net6/
+#WORKDIR /source/aspnet-core-dotnet-core-net6
+#RUN dotnet publish -c release -o /app --no-restore
 
 # final stage/image
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
