--- a/.github/workflows/Build and deploy Docker app.yml
+++ b/.github/workflows/Build and deploy Docker app.yml
@@ -246,7 +246,7 @@ jobs:
 
     - name: 'Deploy Container App'
       uses: Azure/CLI@v1
-      continue-on-error: true
+      continue-on-error: false
       with:
         inlineScript: |
           az containerapp create \
@@ -256,7 +256,8 @@ jobs:
             --image ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:latest \
             --target-port 80 \
             --ingress 'external' \
-            --query properties.configuration.ingress.fqdn
+            --query properties.configuration.ingress.fqdn \
+            --system-assigned true
 
 
     # - name: Build and Deploy Container App
