--- a/Application/aspnet-core-dotnet-core-net6/aspnet-net6.csproj
+++ b/Application/aspnet-core-dotnet-core-net6/aspnet-net6.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>aspnet_core_dotnet_core_net6</RootNamespace>
+    <RootNamespace>aspnet_net6</RootNamespace>
     <UserSecretsId>e4b0d02e-13fb-4041-9685-2d2aba1de612</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
